<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="24dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_title"
        android:hint="@string/job_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_description"
        android:hint="@string/job_description"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_skills"
        android:hint="@string/required_skills"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <Button
        android:id="@+id/button_create"
        android:text="@string/create_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
