<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".activities.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/emails"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/edit_skills"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/skill"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/edit_experience"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/experiences"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/button_save_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_profile"
            android:layout_marginTop="24dp" />
    </LinearLayout>
</ScrollView>
