<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    tools:context=".activities.CandidateDetailActivity">

    <TextView
        android:id="@+id/text_candidate_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="@dimen/_12dp" />

    <TextView
        android:id="@+id/text_candidate_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textSize="16sp"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/text_candidate_skills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skills"
        android:textSize="16sp"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/text_candidate_experience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/experience"
        android:textSize="16sp" />
</LinearLayout>
