<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="24dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_email"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        tools:context=".LoginActivity"/>

    <EditText
        android:id="@+id/edit_password"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <Button
        android:id="@+id/button_login"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
