<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    tools:context=".activities.CandidateListActivity">

    <Button
        android:id="@+id/button_upload_resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_resume"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/button_view_matches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_matched_jobs"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/button_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile" />
</LinearLayout>
