<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    tools:context=".activities.VideoInterviewActivity">

    <TextView
        android:id="@+id/text_video_interview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video_interview_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/text_video_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions_for_joining_the_video_interview"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/button_start_video_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_video_interview" />

</LinearLayout>
